[workspace]
members = [
    "crates/bintos",
    "crates/sizebnd",
    "crates/lz4w",
    "crates/apj",
    "crates/commons",
    "crates/xgmtool",
    "crates/xgm2tool",
    "crates/convsym",
    "crates/sjasm",
    "crates/rescomp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SGDK Contributors"]
description = "SGDK toolchain rewritten in Rust"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
byteorder = "1"
thiserror = "2"
