[package]
name = "convsym"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Symbol table converter for SGDK (ConvSym)"

[[bin]]
name = "convsym"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
regex = "1"
